# ravalry-clone-backend

./: .dockerignore  .eslintrc  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  sample.env  test.db  tsconfig.json
migrations/2021-11-04-043333_create_users/: up.sql
migrations/2022-01-05-162325_create_users/: up.sql
migrations/2022-01-05-162408_create_patterns/: down.sql  up.sql
migrations/2022-01-05-162411_create_favorites/: down.sql  up.sql
migrations/2022-01-20-183535_initial_migration/: down.sql  up.sql
migrations/create_users/: up.sql
src/: actions.rs  app.module.ts  constants.rs  main.rs  main.ts  models.rs  schema.gql  schema.rs  utils.rs
src/admin/: action.rs  actions.rs  mod.rs  routes.rs
src/auth/: auth.module.ts  auth.resolver.ts  auth.service.ts  gql-auth.guard.ts  jwt-auth.guard.ts  jwt.strategy.ts  local.strategy.ts
src/auth/dto/: login-response.dto.ts  login-user.input.ts
src/favorite/: action.rs  mod.rs  models.rs  routes.rs
src/pattern/: actions.rs  mod.rs  models.rs  routes.rs
src/user/: actions.rs  mod.rs  models.rs  routes.rs  schema.rs
src/users/: user.entity.ts  users.module.ts  users.resolver.ts  users.service.ts
src/users/dto/: create-user.input.ts
src/users/models/: user.model.ts
