[package]
name = "ravalry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3.3.2"
bcrypt = "^0.10"
chrono = { version = "^0.4", features = ["serde"] }
diesel = { version = "^1.4.8", features = ["chrono", "sqlite", "r2d2"] }
dotenv = "^0.15"
env_logger = "^0.9"
failure = "^0.1.8"
futures = "^0.3.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^0.8", features = ["serde", "v4"] }

[dev-dependencies]
actix-rt = "^2.3"