[package]
name = "ravalry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "^2.5.1"
actix-web = "^3.3.3"
bcrypt = "^0.10.1"
chrono = { version = "^0.4.19", features = ["serde"] }
diesel = { version = "^1.4.8", features = ["chrono", "sqlite", "r2d2", "uuidv07"] }
dotenv = "^0.15"
env_logger = "^0.9"
fake = { version = "^2.4.3", features = ['chrono'] }
failure = "^0.1.8"
futures = "^0.3.19"
rand = "^0.8.4"
regex = "^1.5.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "^1.0.74"
uuid = { version = "^0.8.2", features = ["serde", "v4"] }